<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MovieDetailActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/summaryCapital"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvBookNow" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvSummary"
        app:layout_constraintTop_toBottomOf="@id/tvSummary">

        <TextView
            android:id="@+id/tvSummaryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="@dimen/_10sdp" />

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBookNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:elevation="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_12sdp"
        app:contentPadding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBookNow"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/book_now"
            android:textColor="@color/app_background"
            android:textSize="@dimen/_15sdp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_background"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:drawableEndCompat="@drawable/ic_baseline_file_upload_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:cardElevation="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            app:layout_goneMarginEnd="@dimen/_2sdp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivMovieImage"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:scaleType="center"
                    android:transitionName="transition" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_play_circle_outline_24" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/the_hateful_eight"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvImage"
            app:layout_constraintTop_toTopOf="@+id/cvImage" />

        <TextView
            android:id="@+id/tvPremiere"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sample_text_runtime"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvImage"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

        <LinearLayout
            android:id="@+id/llGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:weightSum="3"
            app:layout_constraintStart_toEndOf="@+id/cvImage"
            app:layout_constraintTop_toBottomOf="@id/tvPremiere">

            <TextView
                android:id="@+id/tvGenre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/text_bg"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/sample_genre_one"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvGenre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/text_bg"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/sample_genre_two"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:visibility="gone" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/rbRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:numStars="5"
            app:layout_constraintBottom_toTopOf="@id/tvLanguage"
            app:layout_constraintStart_toStartOf="@id/tvMovieName" />

        <TextView
            android:id="@+id/tvRating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:numStars="5"
            android:text="@string/n_a"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tvLanguage"
            app:layout_constraintStart_toEndOf="@id/rbRatingBar" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/sample_language"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="@+id/cvImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>